@@ -1,4 +1,6 @@
 DIST mysqltcl-3.02.tar.gz 193912 RMD160 f110df1b9f2f2bd960257577fe5a72b6159fc1cd SHA1 592cc5d000a4ec18bc4ff16b6caedaaf5142f270 SHA256 b07d19a41da0b55912cc05150cde04340ecc673354f4a00edcede832e095c206
+DIST mysqltcl-3.05.tar.gz 198755 RMD160 d018bf92ad7abcba42332eea9d1c243d54ddd735 SHA1 eafda58c9489b58e8f713caef67cca7c6aeccc07 SHA256 e2346aee4b99b2d91b552718e4be8ec8c4fc4bbbfe12430e4041e9e13d27a245
 EBUILD mysqltcl-3.02.ebuild 727 RMD160 8cb87f1c9f4229980ec3daa5a29fe90be83aa31e SHA1 d8cd380f01364ddef3a8fb269393edc68c5b1e6e SHA256 c528ba1408be96a18f10711954397b8b930341bb01887cd4bc00f6fc23a23e16
-MISC ChangeLog 1901 RMD160 91fd737e4f2bd4b9ef86a12cbd9cfd95cc59d8d1 SHA1 14bdc531c9c14a1db3453393e9ae7f8ae11f9f8a SHA256 a5d0f055f1f781d6db6a0b057fcf91f54104abee22b20c1ace2806f3311bac12
+EBUILD mysqltcl-3.05.ebuild 727 RMD160 8cb87f1c9f4229980ec3daa5a29fe90be83aa31e SHA1 d8cd380f01364ddef3a8fb269393edc68c5b1e6e SHA256 c528ba1408be96a18f10711954397b8b930341bb01887cd4bc00f6fc23a23e16
+MISC ChangeLog 2182 RMD160 ca4e96be7bf3108d2f55c616a9923726e9e32eef SHA1 0c627a144ea11334bfb539e56c3f34b7c4b6b9ee SHA256 2c46b809f2c82c5e9ffe5757d23ef2e72a490a08d473a4b48f399ad970952449
 MISC metadata.xml 158 RMD160 17ad87fdb088c4a22ea1849e25da6efdddf26aa5 SHA1 e5826687b0a91fba71e62888faa74fe37f44045a SHA256 a212959a64142f5508788a3d336b55cdb97645b6e54d8a887e7308c67791d569
