@@ -2,7 +2,15 @@
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-tcltk/mysqltcl/ChangeLog,v 1.12 2008/04/10 18:31:56 fmccor Exp $
 
-  02 Apr 2009; Nathan Phillip Brink <ohnobinki@ohnopublishing.net> -mysqltcl-2.40.ebuild, -mysqltcl-2.50.ebuild
+*mysqltcl-3.05
+
+  17 Apr 2009; Nathan Phillip Brink <ohnobinki@ohnopublishing.net> +mysqltcl-3.05.ebuild, ChangeLog:
+  Fixed missing ChangeLog entries, version bump.
+
+  02 Apr 2009; Nathan Phillip Brink <ohnobinki@ohnopublishing.net> mysqltcl-3.02.ebuild:
+  Added $(get_libdir).
+
+  02 Apr 2009; Nathan Phillip Brink <ohnobinki@ohnopublishing.net> -mysqltcl-2.40.ebuild, -mysqltcl-2.50.ebuild:
   Removed older ebuilds after importing from Gentoo's Portage
 
   10 Apr 2008; Ferris McCormick <fmccor@gentoo.org> mysqltcl-3.02.ebuild:
